<resources>
    <string name="app_name">Yes App</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="facebook_app_id">692172737796060</string>
    <string name="fb_login_protocol_scheme">fb692172737796060</string>

    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_activity_registeractivity">Registeractivity</string>
    <string name="need_a_new_account">NEED A NEW ACCOUNT</string>
    <string name="forget_your_password">Forget your password?</string>
    <string name="password_must_be_at_least_6_digits">Password must be at least 6 digits</string>
    <string name="login">Login</string>
    <string name="invalid_email_please_try_again">Invalid Email, Please try again</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="please_enter_the_password_again">please enter the Password again</string>
    <string name="password_dosn_t_match">Password dosn\'t match</string>
    <string name="your_name">Your Name</string>
    <string name="please_enter_a_name">Please Enter a Name</string>
    <string name="register">Register</string>
    <string name="city_name">City Name</string>
    <string name="post">Post</string>
    <string name="what_do_you_wanna_do">What do you wanna do</string>
    <string name="please_enter_a_description_of_your_activity">Please Enter a Description of your Activity</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
