<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"

    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".RegisterActivity">

    <android.support.design.widget.TextInputLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
    <android.support.design.widget.TextInputEditText
        android:id="@+id/Register_Email"
        android:layout_width="373dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/email"
        android:inputType="textPersonName"
        tools:layout_editor_absoluteX="7dp"
        tools:layout_editor_absoluteY="3dp" />
    </android.support.design.widget.TextInputLayout>

    <TextView
        android:id="@+id/errorMsg1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/invalid_email_please_try_again"
        android:textColor="@android:color/holo_red_dark" />


    <android.support.design.widget.TextInputLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
    <android.support.design.widget.TextInputEditText
        android:id="@+id/Register_Password"
        android:layout_width="370dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPersonName"
        android:password="true"
        tools:layout_editor_absoluteX="7dp"
        tools:layout_editor_absoluteY="49dp" />
    </android.support.design.widget.TextInputLayout>

    <TextView
        android:id="@+id/errorMsg2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/password_must_be_at_least_6_digits"
        android:textColor="@android:color/holo_red_dark" />


    <android.support.design.widget.TextInputLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
    <android.support.design.widget.TextInputEditText
        android:id="@+id/Register_Password2"
        android:layout_width="370dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/please_enter_the_password_again"
        android:inputType="textPersonName"
        android:password="true"
        tools:layout_editor_absoluteX="7dp"
        tools:layout_editor_absoluteY="49dp" />
    </android.support.design.widget.TextInputLayout>

    <TextView
        android:id="@+id/errorMsg22"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/password_dosn_t_match"
        android:textColor="@android:color/holo_red_dark" />


    <android.support.design.widget.TextInputLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
    <android.support.design.widget.TextInputEditText
        android:id="@+id/Register_User"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/your_name"
        android:inputType="textPersonName" />
    </android.support.design.widget.TextInputLayout>

    <TextView
        android:id="@+id/errorMsg3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/please_enter_a_name"
        android:textColor="@android:color/holo_red_dark" />

    <Button
        android:id="@+id/Registerbtn"
        android:layout_width="273dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:onClick="register"
        android:text="@string/register"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.505"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="250dp" />
</LinearLayout>