<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"

    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".LoginActivity">

    <android.support.design.widget.TextInputLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
    <android.support.design.widget.TextInputEditText
        android:id="@+id/loginEmailEdiText"
        android:layout_width="364dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/email"
        android:inputType="textPersonName"
        tools:layout_editor_absoluteX="13dp"
        tools:layout_editor_absoluteY="5dp" />
    </android.support.design.widget.TextInputLayout>

    <TextView
        android:id="@+id/errorMsg4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/invalid_email_please_try_again"
        android:textColor="@android:color/holo_red_dark" />

    <android.support.design.widget.TextInputLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
    <android.support.design.widget.TextInputEditText
        android:id="@+id/loginPasswordEdiText"
        android:layout_width="358dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPersonName"
        android:password="true"
        tools:layout_editor_absoluteX="13dp"
        tools:layout_editor_absoluteY="51dp" />
    </android.support.design.widget.TextInputLayout>

    <TextView
        android:id="@+id/errorMsg5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/password_must_be_at_least_6_digits"
        android:textColor="@android:color/holo_red_dark" />

    <Button
        android:id="@+id/loginBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="login"
        android:text="@string/login"
        tools:layout_editor_absoluteX="105dp"
        tools:layout_editor_absoluteY="201dp" />

    <Button
        android:id="@+id/registerBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="goToRegisterActivity"
        android:text="@string/need_a_new_account"
        tools:layout_editor_absoluteX="102dp"
        tools:layout_editor_absoluteY="249dp" />

    <TextView
        android:id="@+id/resetPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:gravity="center_horizontal"
        android:text="@string/forget_your_password"
        android:onClick="resetPassword"
        android:textColor="@color/colorPrimaryDark"
        android:focusable="true" />

    <ProgressBar
        android:id="@+id/progressBar2"
        style="?android:attr/progressBarStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />



</LinearLayout>